fix firefox bugs: - select field scrollbars were not hidden - page screenshot executed prematurely

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,6 +95,7 @@ select option:checked {
 #metric, .chart-metric, #file-descriptions {
   overflow: visible !important;
   height: 1.4rem !important;
+  scrollbar-width: none;
 }
 
 #metric > option, .chart-metric > option, #file-descriptions > option {
